--- a/LearningKorean/K_word_flipcard_v2.html
+++ b/LearningKorean/K_word_flipcard_v2.html
@@ -1,103 +1,204 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>K Word Flipcard v2</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>K Word Flipcard v2 (2:1 layout, 4 slots, audio badges)</title>
   <style>
     :root {
       --primary: #5D5FEF;
       --secondary: #10B981;
+      --secondary-2: #34D399;
       --wordText: #FFFFFF;
       --radius: 16px;
+      --slot-gap: 0px;
       --transition-speed: 0.5s;
+      --card-w: 320px;
+      --card-h: 450px;
     }
+
+    @media (prefers-reduced-motion: reduce) {
+      :root { --transition-speed: 0.15s; }
+      .slot-inner { transition: none !important; }
+    }
+
+    * { box-sizing: border-box; }
     body {
-      display: flex; justify-content: center; align-items: center;
-      height: 100vh; background: #f5f5f5; margin: 0;
-      font-family: 'Noto Sans KR', sans-serif;
+      display: flex; align-items: center; justify-content: center;
+      min-height: 100vh; margin: 0; background: #f5f7fb;
+      font-family: "Noto Sans KR", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     }
+
     .card {
-      width: 320px; height: 450px; display: flex; flex-direction: column;
-      border-radius: var(--radius); overflow: hidden; box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+      width: var(--card-w);
+      height: var(--card-h);
+      display: grid;
+      grid-template-rows: 2fr 1fr;
+      gap: var(--slot-gap);
+      border-radius: var(--radius);
+      overflow: hidden;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.12);
+      background: transparent;
     }
-    .slot {
-      flex: 1; position: relative; perspective: 1000px; cursor: pointer;
-    }
+
+    .slot { position: relative; perspective: 1000px; }
     .slot-inner {
-      width: 100%; height: 100%; position: absolute; top: 0; left: 0;
-      transform-style: preserve-3d; transition: transform var(--transition-speed);
+      position: absolute; inset: 0; transform-style: preserve-3d;
+      transition: transform var(--transition-speed) cubic-bezier(.2,.8,.2,1);
     }
     .slot.flipped .slot-inner { transform: rotateY(180deg); }
-    .front, .back {
-      width: 100%; height: 100%; position: absolute; backface-visibility: hidden;
-      display: flex; justify-content: center; align-items: center; padding: 10px;
-      border: 1px solid #ddd; box-sizing: border-box;
+
+    .face {
+      position: absolute; inset: 0; display: flex; align-items: center; justify-content: center;
+      backface-visibility: hidden; padding: 14px;
+      border-radius: var(--radius);
     }
-    .front { background: #fff; }
-    .back { background: var(--secondary); color: #fff; transform: rotateY(180deg); }
-    .front.top img { width: 90%; height: 90%; object-fit: contain; border-radius: 12px; }
-    .front.bottom { background: var(--primary); color: var(--wordText); font-size: 2rem; font-weight: bold; }
-    .back.top { font-size: 1rem; }
-    .back.bottom { font-size: 1.5rem; font-weight: bold; }
-    .audio-buttons { position: absolute; top: 5px; right: 5px; display: flex; gap: 5px; }
-    .audio-btn {
-      width: 28px; height: 28px; border-radius: 50%; background: var(--primary);
-      color: white; font-size: 0.8rem; display: flex; justify-content: center; align-items: center;
-      cursor: pointer;
+
+    .front.top { background: #fff; }
+    .back.top  { background: linear-gradient(135deg, var(--secondary), var(--secondary-2)); color: #fff; transform: rotateY(180deg); flex-direction: column; }
+    .front.bottom { background: var(--primary); color: var(--wordText); flex-direction: column; }
+    .back.bottom  { background: linear-gradient(135deg, var(--secondary), var(--secondary-2)); color: #fff; transform: rotateY(180deg); flex-direction: column; }
+
+    .image-wrap {
+      width: 95%; height: 95%;
+      border-radius: 12px; overflow: hidden; box-shadow: 0 2px 10px rgba(0,0,0,.06);
+      display: flex; align-items: center; justify-content: center; background: #fafafa;
     }
+    .image-wrap img { width: 100%; height: 100%; object-fit: contain; }
+
+    .word {
+      font-weight: 800; text-align: center; line-height: 1.2;
+      font-size: 40px;
+      white-space: pre-line;
+    }
+    .meaning {
+      font-size: 40px; font-weight: 700; text-align: center; white-space: pre-line;
+    }
+    .sentence {
+      font-size: 28px; text-align: center; white-space: pre-line;
+    }
+
+    .audio-group { margin-top: 10px; display: flex; gap: 6px; }
+    .audio-button {
+      width: 40px; height: 40px; border-radius: 50%;
+      display: inline-flex; align-items: center; justify-content: center;
+      background: var(--primary); color: #fff; box-shadow: 0 2px 8px rgba(0,0,0,.18);
+      cursor: pointer; transition: transform .15s ease, background .2s ease;
+    }
+    .audio-button:hover { transform: scale(1.06); }
+    .audio-button:active { transform: scale(0.96); }
+    .audio-button svg { width: 20px; height: 20px; fill: currentColor; }
+
+    /* a11y focus */
+    .flip-target { outline: none; }
+    .flip-target:focus-visible { box-shadow: 0 0 0 3px rgba(93,95,239,.35); border-radius: 10px; }
   </style>
 </head>
 <body>
-  <div class="card">
-    <!-- Front-Top (Image) ↔ Back-Top (Sentence) -->
-    <div class="slot" id="slot-top">
+  <div class="card" role="region" aria-label="단어 플립카드">
+    <!-- Front Top: Image -->
+    <section class="slot" id="slot-top">
       <div class="slot-inner">
-        <div class="front top">
-          <img src="https://storage.googleapis.com/download/storage/v1/b/k-learning-data-auto/o/assets%2Fword_images%2F%EA%B0%95%EC%95%84%EC%A7%80_puppy.png?generation=1756571711380625&alt=media" alt="puppy">
-        </div>
-        <div class="back top">
-          <p>강아지가 마당에서 놀고 있어요.</p>
-          <div class="audio-buttons">
-            <div class="audio-btn" data-audio="https://storage.googleapis.com/download/storage/v1/b/k-learning-data-auto/o/assets%2Fword_audio%2F%EA%B0%95%EC%95%84%EC%A7%80_puppy_%EC%98%88%EB%AC%B8.mp3?generation=1756571713558181&alt=media">▶</div>
+        <section class="face front top flip-target" role="button" tabindex="0" aria-pressed="false" aria-label="상단 슬롯 뒤집기">
+          <div class="image-wrap">
+            <img id="img" alt="단어 이미지" />
           </div>
-        </div>
+        </section>
+        <section class="face back top">
+          <p id="sentence" class="sentence">강아지가 마당에서 놀고 있어요.</p>
+          <div class="audio-group">
+            <button class="audio-button" type="button" aria-label="예문 오디오 재생" data-audio-key="sentence">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"/></svg>
+            </button>
+          </div>
+        </section>
       </div>
-    </div>
+    </section>
 
-    <!-- Front-Bottom (Word) ↔ Back-Bottom (Meaning) -->
-    <div class="slot" id="slot-bottom">
+    <!-- Front Bottom: k_word -->
+    <section class="slot" id="slot-bottom">
       <div class="slot-inner">
-        <div class="front bottom">
-          강아지
-          <div class="audio-buttons">
-            <div class="audio-btn" data-audio="https://storage.googleapis.com/download/storage/v1/b/k-learning-data-auto/o/assets%2Fword_audio%2F%EA%B0%95%EC%95%84%EC%A7%80_puppy.mp3?generation=1756571713069736&alt=media">▶</div>
+        <section class="face front bottom flip-target" role="button" tabindex="0" aria-pressed="false" aria-label="하단 슬롯 뒤집기">
+          <div id="word" class="word">강아지</div>
+          <div class="audio-group">
+            <button class="audio-button" type="button" aria-label="단어 오디오 재생" data-audio-key="word">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"/></svg>
+            </button>
           </div>
-        </div>
-        <div class="back bottom">
-          puppy
-        </div>
+        </section>
+        <section class="face back bottom">
+          <div id="meaning" class="meaning">puppy</div>
+          <div class="audio-group">
+            <button class="audio-button" type="button" aria-label="의미 오디오 재생" data-audio-key="meaning">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"/></svg>
+            </button>
+          </div>
+        </section>
       </div>
-    </div>
+    </section>
   </div>
 
   <script>
-    // 독립 슬롯 플립
-    document.querySelectorAll('.slot').forEach(slot => {
-      slot.addEventListener('click', e => {
-        if (e.target.classList.contains('audio-btn')) return; // 오디오 버튼 클릭 시 뒤집힘 방지
-        slot.classList.toggle('flipped');
+    // --- Config intake ---
+    const params = new URLSearchParams(location.search);
+    const data = {
+      word: params.get('k_word') || '강아지',
+      meaning: params.get('e_word') || 'puppy',
+      image: params.get('image') ||
+        'https://storage.googleapis.com/download/storage/v1/b/k-learning-data-auto/o/assets%2Fword_images%2F%EA%B0%95%EC%95%84%EC%A7%80_puppy.png?generation=1756571711380625&alt=media',
+      audio: {
+        word: params.get('k_word_audio_url') || '',
+        sentence: params.get('k_example_audio_url') || '',
+        meaning: params.get('e_word_audio_url') || ''
+      },
+      sentence: params.get('k_sentence') || '강아지가 마당에서 놀고 있어요.'
+    };
+
+    // --- Populate content & comma -> newline ---
+    document.getElementById('img').src = data.image;
+    document.getElementById('word').textContent = data.word.replace(/,/g, '\\n');
+    document.getElementById('meaning').textContent = data.meaning.replace(/,/g, '\\n');
+    document.getElementById('sentence').textContent = data.sentence.replace(/,/g, '\\n');
+
+    // --- Audio ---
+    const playAudio = (src) => {
+      if (!src) return;
+      const a = new Audio();
+      a.preload = 'none';
+      a.src = src;
+      a.play().catch(() => console.warn('오디오 재생 실패:', src));
+    };
+    document.querySelectorAll('[data-audio-key]').forEach(el => {
+      const key = el.getAttribute('data-audio-key');
+      const src = data.audio[key];
+      if (!src) { el.style.display = 'none'; return; }
+      el.addEventListener('click', (e) => { e.stopPropagation(); playAudio(src); });
+      el.addEventListener('keydown', (e) => {
+        if (e.key === 'Enter' || e.key === ' ') { e.preventDefault(); e.stopPropagation(); playAudio(src); }
       });
     });
 
-    // 오디오 재생
-    document.querySelectorAll('.audio-btn').forEach(btn => {
-      btn.addEventListener('click', e => {
-        e.stopPropagation();
-        const audio = new Audio(btn.dataset.audio);
-        audio.play();
+    // --- Flip engine (independent, a11y) ---
+    const attachFlip = (slotId) => {
+      const slot = document.getElementById(slotId);
+      const front = slot.querySelector('.front.flip-target');
+      if (!slot || !front) return;
+      const toggle = () => {
+        const flipped = slot.classList.toggle('flipped');
+        front.setAttribute('aria-pressed', String(flipped));
+      };
+      // Mouse (ignore audio)
+      slot.addEventListener('click', (e) => {
+        if (e.target.closest('.audio-button')) return;
+        toggle();
       });
-    });
+      // Keyboard
+      front.addEventListener('keydown', (e) => {
+        if (e.key === 'Enter' || e.key === ' ') { e.preventDefault(); toggle(); }
+      });
+    };
+    attachFlip('slot-top');
+    attachFlip('slot-bottom');
   </script>
 </body>
 </html>
