--- a/LearningKorean/k_word_flipcard_v2.html
+++ b/LearningKorean/k_word_flipcard_v2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>K Word Flipcard v2.1 (properties == parameters)</title>
+  <title>K Word Flipcard v2.2 (v1-style visuals, v2.1 data)</title>
   <style>
     :root {
       --primary: #5D5FEF;
@@ -11,7 +11,6 @@
       --secondary-2: #34D399;
       --wordText: #FFFFFF;
       --radius: 16px;
-      --slot-gap: 0px;
       --transition-speed: 0.5s;
       --base-w: 320px;
       --base-h: 450px;
@@ -20,79 +19,97 @@
       --fs-word: 40px;
       --fs-meaning: 40px;
       --fs-example: 28px;
+      --pad: 10px; /* tighter than v2.1 (was 14px) */
     }
+
     @media (prefers-reduced-motion: reduce) {
       :root { --transition-speed: 0.15s; }
       .slot-inner { transition: none !important; }
     }
+
     * { box-sizing: border-box; }
     body {
       display: flex; align-items: center; justify-content: center;
-      min-height: 100vh; margin: 0; background: #f5f7fb;
+      min-height: 100vh; margin: 0; background: #171717;
       font-family: "Noto Sans KR", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     }
+
+    /* v1-like outer card: white bg, single shadow, rounded corners */
     .card {
       width: var(--card-w);
       height: var(--card-h);
       display: grid;
       grid-template-rows: 2fr 1fr;
-      gap: var(--slot-gap);
       border-radius: var(--radius);
       overflow: hidden;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.12);
-      background: transparent;
+      background: #FFFFFF; /* v1 느낌 */
+      box-shadow: 0 10px 25px rgba(0,0,0,0.10); /* slightly lighter than v2.1 */
     }
+
     .slot { position: relative; perspective: 1000px; }
     .slot-inner {
       position: absolute; inset: 0; transform-style: preserve-3d;
       transition: transform var(--transition-speed) cubic-bezier(.2,.8,.2,1);
     }
     .slot.flipped .slot-inner { transform: rotateY(180deg); }
+
+    /* Faces fill the card; remove inner rounding so outer corner looks like v1 */
     .face {
       position: absolute; inset: 0; display: flex; align-items: center; justify-content: center;
-      backface-visibility: hidden; padding: 14px;
-      border-radius: var(--radius);
+      backface-visibility: hidden; padding: var(--pad);
+      border-radius: 0; /* key: no inner radius */
     }
-    .front.top { background: #fff; }
+
+    .front.top { background: #FFFFFF; }
     .back.top  { background: linear-gradient(135deg, var(--secondary), var(--secondary-2)); color: #fff; transform: rotateY(180deg); flex-direction: column; }
     .front.bottom { background: var(--primary); color: var(--wordText); flex-direction: column; }
     .back.bottom  { background: linear-gradient(135deg, var(--secondary), var(--secondary-2)); color: #fff; transform: rotateY(180deg); flex-direction: column; }
+
+    /* Image area: edge-to-edge feel like v1 (no extra white frame & shadow) */
     .image-wrap {
-      width: 95%; height: 95%;
-      border-radius: 12px; overflow: hidden; box-shadow: 0 2px 10px rgba(0,0,0,.06);
-      display: flex; align-items: center; justify-content: center; background: #fafafa;
+      width: 100%; height: 100%;
+      border-radius: 12px; overflow: hidden;
+      display: flex; align-items: center; justify-content: center; background: #fff;
+      box-shadow: none; /* remove inner shadow to widen feel */
     }
     .image-wrap img { width: 100%; height: 100%; object-fit: contain; }
+
     .word {
       font-weight: 800; text-align: center; line-height: 1.2;
       font-size: var(--fs-word);
       white-space: pre-line;
       word-break: break-word; overflow-wrap: anywhere;
-      padding: 2px 6px;
+      padding: 0 6px;
     }
     .meaning {
-      font-size: var(--fs-meaning); font-weight: 700; text-align: center; white-space: pre-line;
+      font-size: var(--fs-meaning); font-weight: 800; text-align: center; white-space: pre-line;
       word-break: break-word; overflow-wrap: anywhere;
-      padding: 2px 6px;
+      padding: 0 6px;
     }
     .example {
       font-size: var(--fs-example);
       text-align: center; white-space: pre-line;
       word-break: break-word; overflow-wrap: anywhere;
-      padding: 2px 6px;
+      padding: 0 6px;
     }
-    .audio-group { margin-top: 10px; display: flex; gap: 6px; }
+
+    .audio-group { margin-top: 10px; display: flex; gap: 8px; }
+
+    /* v1-like floating audio button option (for bottom area) */
     .audio-button {
-      width: 40px; height: 40px; border-radius: 50%;
+      width: 44px; height: 44px; border-radius: 50%;
       display: inline-flex; align-items: center; justify-content: center;
-      background: var(--primary); color: #fff; box-shadow: 0 2px 8px rgba(0,0,0,.18);
-      cursor: pointer; transition: transform .15s ease, background .2s ease;
+      background: var(--primary); color: #fff; box-shadow: 0 6px 16px rgba(0,0,0,.20);
+      cursor: pointer; transition: transform .15s ease, background .2s ease, box-shadow .2s ease;
+      border: 3px solid rgba(0,0,0,0.08);
     }
-    .audio-button:hover { transform: scale(1.06); }
-    .audio-button:active { transform: scale(0.96); }
-    .audio-button svg { width: 20px; height: 20px; fill: currentColor; }
+    .audio-button:hover { transform: translateY(-1px) scale(1.04); box-shadow: 0 8px 20px rgba(0,0,0,.24); }
+    .audio-button:active { transform: translateY(0) scale(0.98); }
+    .audio-button svg { width: 22px; height: 22px; fill: currentColor; }
+
+    /* a11y focus */
     .flip-target { outline: none; }
-    .flip-target:focus-visible { box-shadow: 0 0 0 3px rgba(93,95,239,.35); border-radius: 10px; }
+    .flip-target:focus-visible { box-shadow: 0 0 0 3px rgba(93,95,239,.35) inset; border-radius: 8px; }
   </style>
 </head>
 <body>
@@ -131,7 +148,7 @@
           <div id="meaning" class="meaning">puppy</div>
           <div class="audio-group">
             <button class="audio-button" type="button" aria-label="의미 오디오 재생" data-audio-key="meaning">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"/></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77z"/></svg>
             </button>
           </div>
         </section>
@@ -140,7 +157,7 @@
   </div>
 
   <script>
-    // --- Params & width responsiveness ---
+    // Params & responsive sizing
     const params = new URLSearchParams(location.search);
     const BASE_W = 320, BASE_H = 450, aspect = BASE_H / BASE_W;
     const rawWidth = params.get('width');
@@ -153,6 +170,8 @@
     document.documentElement.style.setProperty('--fs-word', clamp(40 * scale, 14, 96) + 'px');
     document.documentElement.style.setProperty('--fs-meaning', clamp(40 * scale, 14, 96) + 'px');
     document.documentElement.style.setProperty('--fs-example', clamp(28 * scale, 12, 72) + 'px');
+
+    // Optional color overrides
     const colorOr = (k, fallback) => {
       const v = params.get(k);
       return v ? (v.startsWith('#') ? v : '#' + v) : fallback;
@@ -163,7 +182,7 @@
     document.documentElement.style.setProperty('--secondary-2', colorOr('secondary2', rs.getPropertyValue('--secondary-2').trim() || '#34D399'));
     document.documentElement.style.setProperty('--wordText', colorOr('wordText', rs.getPropertyValue('--wordText').trim() || '#FFFFFF'));
 
-    // --- Data object: properties == parameter keys ---
+    // Data: v2.1 parameter-equal properties
     const data = {
       k_word: params.get('k_word') || '강아지',
       e_word: params.get('e_word') || 'puppy',
@@ -175,13 +194,13 @@
       e_word_audio_url: params.get('e_word_audio_url') || ''
     };
 
-    // --- DOM population ---
+    // DOM
     document.getElementById('img').src = data.image_url;
     document.getElementById('word').textContent = data.k_word.replace(/,/g, '\n');
     document.getElementById('meaning').textContent = data.e_word.replace(/,/g, '\n');
     document.getElementById('example').textContent = data.k_example.replace(/,/g, '\n');
 
-    // --- Audio (event isolation) ---
+    // Audio
     const srcMap = {
       word: data.k_word_audio_url,
       example: data.k_example_audio_url,
@@ -204,7 +223,7 @@
       });
     });
 
-    // --- Flip engine (independent, a11y) ---
+    // Flip
     const attachFlip = (slotId) => {
       const slot = document.getElementById(slotId);
       const front = slot.querySelector('.front.flip-target');
