--- a/LearningKorean/K_word_flipcard_v2.3.html
+++ b/LearningKorean/K_word_flipcard_v2.3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>K Word Flipcard v2.3 (preset: 거북이)</title>
+  <title>K Word Flipcard v2.4_full (design-only update)</title>
   <style>
     :root {
       --primary: #5D5FEF;
@@ -20,17 +20,19 @@
       --fs-meaning: 50px;
       --fs-example: 32px;
       --pad: 10px;
-      --fab-size: 42px;
-      --fab-offset: 8px;
+      --fab-size: 46px;
+      --fab-offset: 10px;
     }
+
     @media (prefers-reduced-motion: reduce) {
       :root { --transition-speed: 0.15s; }
       .slot-inner { transition: none !important; }
     }
+
     * { box-sizing: border-box; }
     body {
       display: flex; align-items: center; justify-content: center;
-      min-height: 100vh; margin: 0; background: #171717;
+      min-height: 100vh; margin: 0; background: #0f172a;
       font-family: "Noto Sans KR", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     }
     .card {
@@ -41,7 +43,7 @@
       border-radius: var(--radius);
       overflow: hidden;
       background: #FFFFFF;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.10);
+      box-shadow: 0 12px 30px rgba(0,0,0,0.15);
     }
     .slot { position: relative; perspective: 1000px; }
     .slot-inner {
@@ -54,10 +56,13 @@
       backface-visibility: hidden; padding: var(--pad);
       border-radius: 0;
     }
+
+    /* --- DESIGN-ONLY CHANGES vs v2.3 --- */
     .front.top { background: #FFFFFF; }
-    .back.top  { background: linear-gradient(135deg, var(--secondary), var(--secondary-2)); color: #fff; transform: rotateY(180deg); flex-direction: column; }
-    .front.bottom { background: var(--primary); color: var(--wordText); flex-direction: column; }
+    .back.top  { background: linear-gradient(135deg, #22d3ee, #0ea5e9); color: #fff; transform: rotateY(180deg); flex-direction: column; }
+    .front.bottom { background: linear-gradient(135deg, #6366F1, var(--primary)); color: var(--wordText); flex-direction: column; }
     .back.bottom  { background: linear-gradient(135deg, var(--secondary), var(--secondary-2)); color: #fff; transform: rotateY(180deg); flex-direction: column; }
+
     .image-wrap {
       width: 100%; height: 100%;
       border-radius: 12px; overflow: hidden;
@@ -65,6 +70,7 @@
       box-shadow: none;
     }
     .image-wrap img { width: 100%; height: 100%; object-fit: contain; }
+
     .word {
       font-weight: 800; text-align: center; line-height: 1.2;
       font-size: var(--fs-word);
@@ -83,6 +89,7 @@
       word-break: break-word; overflow-wrap: anywhere;
       padding: 0 6px;
     }
+
     .audio-fab {
       position: absolute;
       top: var(--fab-offset);
@@ -92,18 +99,19 @@
       height: var(--fab-size);
       border-radius: 9999px;
       display: inline-flex; align-items: center; justify-content: center;
-      background: rgba(255,255,255,0.7);
-      border: 1px solid rgba(0,0,0,0.1);
-      box-shadow: 0 6px 16px rgba(0,0,0,.20);
-      color: var(--primary);
-      backdrop-filter: blur(6px);
-      -webkit-backdrop-filter: blur(6px);
+      background: rgba(255,255,255,0.22);
+      border: 1px solid rgba(255,255,255,0.45);
+      box-shadow: 0 8px 22px rgba(0,0,0,.25);
+      color: #FFFFFF;
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
       cursor: pointer;
-      transition: transform .15s ease, box-shadow .2s ease, background .2s ease;
+      transition: transform .18s ease, box-shadow .2s ease, background .25s ease;
     }
-    .audio-fab:hover { transform: translateY(-1px) scale(1.04); box-shadow: 0 8px 20px rgba(0,0,0,.24); background: rgba(255,255,255,0.82); }
-    .audio-fab:active { transform: translateY(0) scale(0.98); }
-    .audio-fab svg { width: 20px; height: 20px; fill: currentColor; }
+    .audio-fab:hover { transform: translateY(-1px) scale(1.08); background: rgba(255,255,255,0.3); box-shadow: 0 10px 26px rgba(0,0,0,.3); }
+    .audio-fab:active { transform: translateY(0) scale(0.95); }
+    .audio-fab svg { width: 22px; height: 22px; fill: currentColor; }
+
     .flip-target { outline: none; }
     .flip-target:focus-visible { box-shadow: 0 0 0 3px rgba(93,95,239,.35) inset; border-radius: 8px; }
   </style>
@@ -130,7 +138,7 @@
       <div class="slot-inner">
         <section class="face front bottom flip-target" role="button" tabindex="0" aria-pressed="false" aria-label="하단 슬롯 뒤집기">
           <button class="audio-fab" type="button" aria-label="단어 오디오 재생" data-audio-key="word">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77z"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"/></svg>
           </button>
           <div id="word" class="word">거북이</div>
         </section>
@@ -145,6 +153,7 @@
   </div>
 
   <script>
+    // ---- (Unchanged functional logic from v2.3) ----
     const params = new URLSearchParams(location.search);
     const BASE_W = 320, BASE_H = 450, aspect = BASE_H / BASE_W;
     const rawWidth = params.get('width');
@@ -168,7 +177,7 @@
     document.documentElement.style.setProperty('--secondary-2', colorOr('secondary2', rs.getPropertyValue('--secondary-2').trim() || '#34D399'));
     document.documentElement.style.setProperty('--wordText', colorOr('wordText', rs.getPropertyValue('--wordText').trim() || '#FFFFFF'));
 
-    // Preset defaults for testing (overridden by URL params if present)
+    // Preset defaults (exactly as v2.3)
     const data = {
       k_word: params.get('k_word') || '거북이',
       e_word: params.get('e_word') || 'turtle',
@@ -196,6 +205,7 @@
       a.src = src;
       a.play().catch(() => console.warn('오디오 재생 실패:', src));
     };
+
     document.querySelectorAll('[data-audio-key]').forEach(el => {
       const key = el.getAttribute('data-audio-key');
       const src = srcMap[key];
