--- a/LearningKorean/K_word_flipcard_v2.4.html
+++ b/LearningKorean/K_word_flipcard_v2.4.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>K Word Flipcard v2.4_full (design-only update)</title>
+  <title>K Word Flipcard v2.4 (unified keys: property === parameter)</title>
   <style>
     :root {
       --primary: #5D5FEF;
@@ -16,21 +16,18 @@
       --base-h: 450px;
       --card-w: var(--base-w);
       --card-h: var(--base-h);
-      --fs-word: 50px;
-      --fs-meaning: 50px;
-      --fs-example: 32px;
+      --fs-k_word: 50px;
+      --fs-e_word: 50px;
+      --fs-k_sentence: 32px;
       --pad: 10px;
-      --fab-size: 46px;
+      /* 36px * 0.66 ≈ 24px */
+      --fab-size: 24px;
       --fab-offset: 10px;
     }
 
     @media (prefers-reduced-motion: reduce) {
       :root { --transition-speed: 0.15s; }
-      .slot-inner {
-      position: absolute; inset: 0; transform-style: preserve-3d;
-      transition: transform var(--transition-speed) cubic-bezier(.2,.8,.2,1);
-      will-change: transform;
-    }
+      .slot-inner { transition: none !important; }
     }
 
     * { box-sizing: border-box; }
@@ -57,12 +54,11 @@
     .slot.flipped .slot-inner { transform: rotateY(180deg); }
     .face {
       position: absolute; inset: 0; display: flex; align-items: center; justify-content: center;
-      -webkit-backface-visibility: hidden; backface-visibility: hidden;
-      padding: var(--pad);
+      backface-visibility: hidden; padding: var(--pad);
       border-radius: 0;
     }
 
-    /* --- DESIGN-ONLY CHANGES vs v2.3 --- */
+    /* DESIGN */
     .front.top { background: #FFFFFF; }
     .back.top  { background: linear-gradient(135deg, #22d3ee, #0ea5e9); color: #fff; transform: rotateY(180deg); flex-direction: column; }
     .front.bottom { background: linear-gradient(135deg, #6366F1, var(--primary)); color: var(--wordText); flex-direction: column; }
@@ -95,7 +91,6 @@
       padding: 0 6px;
     }
 
-    /* base positioning & interaction */
     .audio-fab {
       position: absolute;
       top: var(--fab-offset);
@@ -105,51 +100,21 @@
       height: var(--fab-size);
       border-radius: 9999px;
       display: inline-flex; align-items: center; justify-content: center;
-      cursor: pointer;
-      color: #FFFFFF;
-      background: transparent;
-      border: none;
-      box-shadow: none;
-      transition: transform .18s ease, box-shadow .2s ease, background .25s ease, filter .25s ease;
-    }
-    .audio-fab svg { width: 22px; height: 22px; fill: currentColor; }
-
-    /* VARIANTS */
-    /* 1) Glassmorphism */
-    .audio-fab--glass {
       background: rgba(255,255,255,0.22);
       border: 1px solid rgba(255,255,255,0.45);
       box-shadow: 0 8px 22px rgba(0,0,0,.25);
-      backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px);
+      color: #FFFFFF;
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      cursor: pointer;
+      transition: transform .18s ease, box-shadow .2s ease, background .25s ease;
     }
-    .audio-fab--glass:hover { transform: translateY(-1px) scale(1.08); background: rgba(255,255,255,0.3); box-shadow: 0 10px 26px rgba(0,0,0,.3); }
-    .audio-fab--glass:active { transform: translateY(0) scale(0.95); }
+    .audio-fab:hover { transform: translateY(-1px) scale(1.08); background: rgba(255,255,255,0.3); box-shadow: 0 10px 26px rgba(0,0,0,.3); }
+    .audio-fab:active { transform: translateY(0) scale(0.95); }
+    /* Icon size adjusted for 24px button */
+    .audio-fab svg { width: 16px; height: 16px; fill: currentColor; }
 
-    /* 2) Solid gradient */
-    .audio-fab--solid { background: linear-gradient(135deg, var(--primary), #4f46e5); box-shadow: 0 10px 24px rgba(79,70,229,.45); }
-    .audio-fab--solid:hover { transform: translateY(-1px) scale(1.06); filter: brightness(1.05); }
-    .audio-fab--solid:active { transform: translateY(0) scale(0.95); }
-
-    /* 3) Outline */
-    .audio-fab--outline { background: transparent; border: 2px solid rgba(255,255,255,.9); box-shadow: 0 6px 18px rgba(0,0,0,.2); }
-    .audio-fab--outline:hover { background: rgba(255,255,255,.12); transform: translateY(-1px) scale(1.06); }
-    .audio-fab--outline:active { transform: translateY(0) scale(.95); }
-
-    /* 4) Neumorphism (light chip) */
-    .audio-fab--neumorph { background: #ecf0f3; color: #4f46e5; border: none; box-shadow: 8px 8px 16px #c8d0d9, -8px -8px 16px #ffffff; }
-    .audio-fab--neumorph:hover { filter: brightness(1.03); transform: translateY(-1px) scale(1.04); }
-    .audio-fab--neumorph:active { box-shadow: inset 8px 8px 16px #ccd4dc, inset -8px -8px 16px #ffffff; transform: translateY(0) scale(.97); }
-
-    /* 5) Ghost */
-    .audio-fab--ghost { background: transparent; border: 1px solid rgba(255,255,255,.35); box-shadow: none; }
-    .audio-fab--ghost:hover { background: rgba(255,255,255,.08); border-color: rgba(255,255,255,.6); transform: translateY(-1px) scale(1.06); }
-
-    /* 6) Pulse ring */
-    .audio-fab--pulse { background: linear-gradient(135deg, var(--primary), #7c3aed); box-shadow: 0 10px 28px rgba(124,58,237,.45); }
-    .audio-fab--pulse::after { content: ""; position: absolute; inset: 0; border-radius: inherit; box-shadow: 0 0 0 0 rgba(255,255,255,.55); animation: pulse 1.8s ease-out infinite; pointer-events: none; }
-    .audio-fab--pulse:hover { transform: translateY(-1px) scale(1.06); }
-    @keyframes pulse { 0% { box-shadow: 0 0 0 0 rgba(255,255,255,.55); } 70% { box-shadow: 0 0 0 12px rgba(255,255,255,0); } 100% { box-shadow: 0 0 0 0 rgba(255,255,255,0); } }
-
+    /* a11y & pointer cursor for flip targets */
     .flip-target { outline: none; cursor: pointer; }
     .flip-target:focus-visible { box-shadow: 0 0 0 3px rgba(93,95,239,.35) inset; border-radius: 8px; }
   </style>
@@ -160,14 +125,14 @@
       <div class="slot-inner">
         <section class="face front top flip-target" role="button" tabindex="0" aria-pressed="false" aria-label="상단 슬롯 뒤집기">
           <div class="image-wrap">
-            <img id="img" alt="단어 이미지" />
+            <img id="image_url" alt="단어 이미지" />
           </div>
         </section>
         <section class="face back top">
-          <button class="audio-fab" type="button" aria-label="예문 오디오 재생" data-audio-key="example">
+          <button class="audio-fab" type="button" aria-label="k_sentence 오디오 재생" data-audio-key="k_sentence">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"/></svg>
           </button>
-          <p id="example" class="example">강아지가 마당에서 놀고 있어요.</p>
+          <p id="k_sentence" class="example">강아지가 마당에서 놀고 있어요.</p>
         </section>
       </div>
     </section>
@@ -175,23 +140,23 @@
     <section class="slot" id="slot-bottom">
       <div class="slot-inner">
         <section class="face front bottom flip-target" role="button" tabindex="0" aria-pressed="false" aria-label="하단 슬롯 뒤집기">
-          <button class="audio-fab" type="button" aria-label="단어 오디오 재생" data-audio-key="word">
+          <button class="audio-fab" type="button" aria-label="k_word 오디오 재생" data-audio-key="k_word">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"/></svg>
           </button>
-          <div id="word" class="word">거북이</div>
+          <div id="k_word" class="word">거북이</div>
         </section>
         <section class="face back bottom">
-          <button class="audio-fab" type="button" aria-label="의미 오디오 재생" data-audio-key="meaning">
+          <button class="audio-fab" type="button" aria-label="e_word 오디오 재생" data-audio-key="e_word">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"/></svg>
           </button>
-          <div id="meaning" class="meaning">turtle</div>
+          <div id="e_word" class="meaning">turtle</div>
         </section>
       </div>
     </section>
   </div>
 
   <script>
-    // ---- (Unchanged functional logic from v2.3) ----
+    // ---- (Functional logic from v2.3, unchanged except title) ----
     const params = new URLSearchParams(location.search);
     const BASE_W = 320, BASE_H = 450, aspect = BASE_H / BASE_W;
     const rawWidth = params.get('width');
@@ -215,35 +180,26 @@
     document.documentElement.style.setProperty('--secondary-2', colorOr('secondary2', rs.getPropertyValue('--secondary-2').trim() || '#34D399'));
     document.documentElement.style.setProperty('--wordText', colorOr('wordText', rs.getPropertyValue('--wordText').trim() || '#FFFFFF'));
 
-    // Preset defaults (exactly as v2.3)
+    // Preset defaults
     const data = {
-      k_word: params.get('k_word') || '거북이',
-      e_word: params.get('e_word') || 'turtle',
-      k_example: params.get('k_example') || '강아지가 마당에서 놀고 있어요.',
+      k_k_word: params.get('k_word') || '거북이',
+      e_k_word: params.get('e_word') || 'turtle',
+      k_sentence: params.get('k_sentence') || '강아지가 마당에서 놀고 있어요.',
       image_url: params.get('image_url') || 'https://storage.googleapis.com/download/storage/v1/b/k-learning-data-auto/o/assets%2Fword_images%2F%EA%B1%B0%EB%B6%81%EC%9D%B4_tortoise;%20turtle.png?generation=1756571610264627&alt=media',
       k_word_audio_url: params.get('k_word_audio_url') || 'https://storage.googleapis.com/download/storage/v1/b/k-learning-data-auto/o/assets%2Fword_audio%2F%EA%B1%B0%EB%B6%81%EC%9D%B4_tortoise;%20turtle.mp3?generation=1756571611852484&alt=media',
-      k_example_audio_url: params.get('k_example_audio_url') || 'https://storage.googleapis.com/download/storage/v1/b/k-learning-data-auto/o/assets%2Fword_audio%2F%EA%B1%B0%EB%B6%81%EC%9D%B4_tortoise;%20turtle_%EC%98%88%EB%AC%B8.mp3?generation=1756571612500367&alt=media',
+      k_sentence_audio_url: params.get('k_sentence_audio_url') || 'https://storage.googleapis.com/download/storage/v1/b/k-learning-data-auto/o/assets%2Fword_audio%2F%EA%B1%B0%EB%B6%81%EC%9D%B4_tortoise;%20turtle_%EC%98%88%EB%AC%B8.mp3?generation=1756571612500367&alt=media',
       e_word_audio_url: params.get('e_word_audio_url') || 'https://storage.googleapis.com/download/storage/v1/b/k-learning-data-auto/o/assets%2Fword_audio%2Ftortoise;%20turtle_%EA%B1%B0%EB%B6%81%EC%9D%B4.mp3?generation=1756571614064538&alt=media'
     };
 
-    document.getElementById('img').src = data.image_url;
-    document.getElementById('word').textContent = data.k_word.replace(/,/g, '\n');
-    document.getElementById('meaning').textContent = data.e_word.replace(/,/g, '\n');
-    document.getElementById('example').textContent = data.k_example.replace(/,/g, '
-');
-
-    // Apply audio-fab variant from URL (?fab=glass|solid|outline|neumorph|ghost|pulse)
-    (function(){
-      const fabVariant = (params.get('fab') || 'glass').toLowerCase();
-      const allowed = ['glass','solid','outline','neumorph','ghost','pulse'];
-      const variantClass = allowed.includes(fabVariant) ? `audio-fab--${fabVariant}` : 'audio-fab--glass';
-      document.querySelectorAll('.audio-fab').forEach(btn => btn.classList.add(variantClass));
-    })();
+    document.getElementById('image_url').src = data.image_url;
+    document.getElementById('k_word').textContent = data.k_word.replace(/,/g, '\n');
+    document.getElementById('e_word').textContent = data.e_word.replace(/,/g, '\n');
+    document.getElementById('k_sentence').textContent = data.k_sentence.replace(/,/g, '\n');
 
     const srcMap = {
-      word: data.k_word_audio_url,
-      example: data.k_example_audio_url,
-      meaning: data.e_word_audio_url,
+      k_word: data.k_word_audio_url,
+      k_sentence: data.k_sentence_audio_url,
+      e_word: data.e_word_audio_url,
     };
     const playAudio = (src) => {
       if (!src) return;
@@ -265,20 +221,16 @@
 
     const attachFlip = (slotId) => {
       const slot = document.getElementById(slotId);
-      const front = slot?.querySelector('.front.flip-target');
+      const front = slot.querySelector('.front.flip-target');
       if (!slot || !front) return;
       const toggle = () => {
         const flipped = slot.classList.toggle('flipped');
         front.setAttribute('aria-pressed', String(flipped));
       };
-      const handler = (e) => {
-        if (e.target.closest('[data-audio-key]')) return; // do not flip when audio button is pressed
+      slot.addEventListener('click', (e) => {
+        if (e.target.closest('[data-audio-key]')) return;
         toggle();
-      };
-      // Click + pointer fallback for some preview environments
-      slot.addEventListener('click', handler);
-      slot.addEventListener('pointerup', handler);
-      slot.addEventListener('touchend', handler);
+      });
       front.addEventListener('keydown', (e) => {
         if (e.key === 'Enter' || e.key === ' ') { e.preventDefault(); toggle(); }
       });
