--- a/LearningKorean/K_word_flipcard_v2.4.html
+++ b/LearningKorean/K_word_flipcard_v2.4.html
@@ -182,8 +182,8 @@
 
     // Preset defaults
     const data = {
-      k_k_word: params.get('k_word') || '거북이',
-      e_k_word: params.get('e_word') || 'turtle',
+      k_word: params.get('k_word') || '거북이',
+      e_word: params.get('e_word') || 'turtle',
       k_sentence: params.get('k_sentence') || '강아지가 마당에서 놀고 있어요.',
       image_url: params.get('image_url') || 'https://storage.googleapis.com/download/storage/v1/b/k-learning-data-auto/o/assets%2Fword_images%2F%EA%B1%B0%EB%B6%81%EC%9D%B4_tortoise;%20turtle.png?generation=1756571610264627&alt=media',
       k_word_audio_url: params.get('k_word_audio_url') || 'https://storage.googleapis.com/download/storage/v1/b/k-learning-data-auto/o/assets%2Fword_audio%2F%EA%B1%B0%EB%B6%81%EC%9D%B4_tortoise;%20turtle.mp3?generation=1756571611852484&alt=media',
