--- a/LearningKorean/K_word_flipcard_v2.41.html
+++ b/LearningKorean/K_word_flipcard_v2.41.html
@@ -91,7 +91,13 @@
       display: flex; align-items: center; justify-content: center; background: #fff;
       box-shadow: none;
     }
-    .image-wrap img { width: 100%; height: 100%; object-fit: contain; }
+        .image-wrap img {
+      width: 100%; height: 100%; object-fit: contain;
+      transition: transform 0.35s cubic-bezier(.2,.8,.2,1);
+    }
+    .image-wrap:hover img {
+      transform: scale(1.05);
+    }
 
     .word, .meaning, .example {
       text-align: center;
