--- a/LearningKorean/K_word_flipcard_v2.41.html
+++ b/LearningKorean/K_word_flipcard_v2.41.html
@@ -95,7 +95,7 @@
       width: 100%; height: 100%; object-fit: contain;
       transition: transform 0.35s cubic-bezier(.2,.8,.2,1);
     }
-    .image-wrap:hover img {
+    .face.front.top:hover .image-wrap img {
       transform: scale(1.05);
     }
 
