--- a/LearningKorean/index.html
+++ b/LearningKorean/index.html
@@ -9,10 +9,19 @@
 <body>
     <div id="category-filter-container"></div>
   <div id="card-container"></div>
+
+  <!-- Desktop Pagination -->
   <div id="pagination">
     <button id="prev-page">이전</button>
     <span id="page-info"></span>
     <button id="next-page">다음</button>
+  </div>
+
+  <!-- Mobile Navigation -->
+  <div id="mobile-nav">
+    <button id="prev-card">이전 단어</button>
+    <span id="card-indicator"></span>
+    <button id="next-card">다음 단어</button>
   </div>
 
   <script src="config.js"></script>
